syntax = "proto3";

package broker;

enum tag_t {
  TRIAL   = 0;
  LICENSE = 1;
  SUPPORT = 2;
  BUG     = 3;
}

service BrokerService {
  // Publisher actions
  rpc Register(RegisterRequest)   returns (RegisterResponse) {}
  rpc Publish(stream Message)     returns (SuccessResponse)  {}
  
  // Subscriber actions
  rpc Subscribe(SubscribeRequest) returns (stream Message)   {}
  rpc RequestTags(TagsRequest)    returns (TagsResponse)     {}
}

message RegisterRequest {
  tag_t tag = 1; 
}

message RegisterResponse {
  int32 id = 1;
}

message SubscribeRequest {
  int32 tag = 1; 
}

message SuccessResponse {
  bool success = 1;
}

message SubscribeResponse {
  int32 tags = 1;
}

message TagsRequest { /* empty */ }

message TagsResponse {
  string list = 1;
}

message Message {
  string msg = 1;
  int32  id  = 2;
  tag_t  tag = 3;
}
